# pharma-guide

./: .env.example  .env.local.example  .gitignore  BCRYPT_FIX.md  CLEANUP_SUMMARY.md  CONFIG_FIX.md  DOCUMENTATION_UPDATE.md  Dockerfile  FINAL_STATUS.md  FRONTEND_API_FIX.md  FRONTEND_QUICKSTART.md  FULLSTACK_GUIDE.md  GEMINI_3_UPGRADE.md  GEMINI_QUICK_START.md  GEMINI_SETUP.md  GET_GEMINI_KEY.md  MIGRATION_TO_GEMINI.md  MIGRATION_TO_UV.md  QUICKSTART.md  QUICK_START.md  README.md  README_LLM.md  REAL_LOGIC_IMPLEMENTATION.md  RUN_GUIDE.md  SETUP_LLM.md  SUCCESS_SUMMARY.md  commit_changes.sh  docker-compose.yml  project-summary.md  pyproject.toml  requirements.md  requirements.txt  test_llm_integration.py
docs/: ENVIRONMENT_SETUP.md  ENVIRONMENT_VARIABLES.md  FAQ.md  LOCAL_DEVELOPMENT.md  MOCK_DATA_GUIDE.md  graph_reasoning_engine.md  query_translation_service.md  task_5.2_implementation_summary.md  task_7_implementation_summary.md
examples/: interaction_detection_demo.py  query_translation_demo.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: generate_keys.py  run_fullstack.sh  run_local.sh  setup_env.sh  setup_local_dev.sh
src/: __init__.py  config.py  main.py
tests/: conftest.py  test_alternative_recommender.py  test_auth.py  test_dynamic_context_reevaluation_property.py  test_entity_recognition_clarification.py  test_entity_resolution.py  test_etl_pipeline.py  test_evidence_validation.py  test_graph_builder.py  test_interaction_detector.py  test_knowledge_graph_database.py  test_knowledge_graph_models.py  (+25 more)
(+316 files in other folders)
