[project]
name = "pharmaguide"
version = "0.1.0"
description = "AI-powered personal health companion platform with medical knowledge graph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.34.0",
    "gremlinpython>=3.7.0",
    "networkx>=3.2.1",
    "spacy>=3.7.2",
    "scikit-learn>=1.3.2",
    "transformers>=4.36.0",
    "torch>=2.1.1",
    "pandas>=2.1.4",
    "numpy>=1.25.2",
    "opensearch-py>=2.4.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.1.2,<5.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "hypothesis>=6.92.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "hypothesis>=6.92.1",
]
